--- a/metrics/efex.html
+++ b/metrics/efex.html
@@ -226,7 +226,7 @@ footer {
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-  const ctx = document.getElementById('falcoEffectivenessChart').getContext('2d');
+  const ctx2 = document.getElementById('falcoEffectivenessChart').getContext('2d');
 
   const data = {
     labels: ['Vendor', 'Custom'],
@@ -283,7 +283,7 @@ footer {
     },
   };
 
-  new Chart(ctx, {
+  new Chart(ctx2, {
     type: 'bar',
     data: data,
     options: options,
