--- a/metrics/statistics.html
+++ b/metrics/statistics.html
@@ -153,15 +153,15 @@
   </nav>
 
   <!-- Content Section -->
-  <div class="container mt-5">
+  <!-- <div class="container mt-5">
     <h1>Welcome to statistics</h1>
     <p>This is a simple landing page template with a responsive navbar using Bootstrap 5.</p>
-  </div>
+  </div> -->
 
   <div class="container">
     <div class="title-section">
         <img src="https://i.ibb.co/s636MLf/falco-social.jpg" alt="Left Image" class="title-image">
-        <h6 class="title-text">Falco Statistics</h6>
+        <h6 class="title-text">Falco General Statistics</h6>
         <img src="https://i.ibb.co/MMcNN7t/mercado-libre.jpg" alt="Right Image" class="title-image">
     </div>
 
