--- a/metrics/effectiveness.html
+++ b/metrics/effectiveness.html
@@ -407,7 +407,7 @@ footer {
     <div class="container mt-5">
       <div class="button-container mb-3">
         <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#methodologyContainer" aria-expanded="false" aria-controls="methodologyContainer">
-          Evaluation Methodology 
+           View Evaluation Methodology 
         </button>
       </div>
       <div class="collapse" id="methodologyContainer">
