new custom rules update in statistics

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <img src="assets/rules2-icon.png" alt="Rules Icon">
           <h2>Rules</h2>
           <p>Explore and customize rules to detect and respond to suspicious activities.</p>
-          <a href="rules/community-rules.html">Learn More</a>
+          <a href="rules/custom-rules.html">Learn More</a>
         </div>
       </div>
       <div class="col-md-6">
