--- a/metrics/statistics.html
+++ b/metrics/statistics.html
@@ -184,14 +184,14 @@
       <div class="col-md-3">
           <div class="metric-card">
               <h4 class="metric-header">New Custom Rules</h4>
-              <p class="metric-value">8</p>
+              <p class="metric-value">7</p>
           </div>
       </div>
 
       <div class="col-md-3">
           <div class="metric-card">
               <h4 class="metric-header">New Third Party Rules</h4>
-              <p class="metric-value">7</p>
+              <p class="metric-value">0</p>
           </div>
       </div>
   </div>
@@ -205,14 +205,13 @@
       <div class="rules-list">
           <div>
               <h5>Reglas Custom</h5>
-              <div class="rule">experimental 17 - Malicious cURL commands [custom]</div>
-              <div class="rule">experimental 18 - Container escape behaviors detected inside the container [custom]</div>
-              <div class="rule">experimental 19 - Container escape behavior based core pattern  [custom]</div>
-              <div class="rule">experimental 20 - Container escape behavior based binfmt_misc [custom]</div>
-              <div class="rule">experimental 26 - Web Scanner process detected inside a container [custom]</div>
-              <div class="rule">experimental 28 - Fuzzy tools detected in container [custom]</div>
-              <div class="rule">experimental 29 - NoSQLi behaviors detected inside the container [custom]</div>
-              <div class="rule">experimental 30 - Launch Advanced Network Toolset in container [custom]</div>
+              <div class="rule">experimental 31 - Arbitrary Host File Access from containers launched by containerd CRI (CVE-2022-23648) [custom]</div>
+              <div class="rule">experimental 32 - Suspicious Resource Exhaustion Command Detection (CVE-2022-31030) [custom]</div>
+              <div class="rule">experimental 33 - File Made Inmutable inside a Container [custom]</div>
+              <div class="rule">experimental 34 - Memory Swap modification inside a Container  [custom]</div>
+              <div class="rule">experimental 35 - Command chaining patterns via pipe [custom]</div>
+              <div class="rule">experimental 36 - Suspicious Mining Process Creation Event [custom]</div>
+              <div class="rule">experimental 37 - Suspicious Memory Grep Activity [custom]</div>
           </div>
           <div>
               <h5>Reglas Third Party</h5>
@@ -233,14 +232,14 @@
       <div class="col-md-3">
           <div class="metric-card">
               <h4 class="metric-header">Total IRT_Alert Rules</h4>
-              <p class="metric-value">23</p>
+              <p class="metric-value">31</p>
           </div>
       </div>
 
       <div class="col-md-3">
           <div class="metric-card">
-              <h4 class="metric-header">View New IRT Alert Flow Rules</h4>
-              <p class="metric-value">8</p>
+              <h4 class="metric-header">New IRT Alert Flow Rules</h4>
+              <p class="metric-value">0</p>
           </div>
       </div>
   </div>
