No New IRT_Alert Rules in Q4

--- a/metrics/statistics.html
+++ b/metrics/statistics.html
@@ -253,6 +253,7 @@
       <div class="rules-list">
           <div>
             <h5>Reglas Third Party</h5>
+            <div class="rule" style="color: orange; font-weight: bold;">⚠️ "No IRT_Alert rules were tagged during Q4. There is a Q3 PR currently in deployment."</div>
             <div class="rule" style="color: green; font-weight: bold;">🆕 Kubernetes malicious tools [custom]</div>
             <div class="rule" style="color: green; font-weight: bold;">🆕 SQL injection tools detected in Container [custom]</div>
             <div class="rule" style="color: green; font-weight: bold;">🆕 Scanner or automated tools launched in container [custom]</div>
