disable IRT_Alert new rules

--- a/metrics/statistics.html
+++ b/metrics/statistics.html
@@ -252,16 +252,16 @@
       <h4 class="text-center my-3">Reglas</h4>
       <div class="rules-list">
           <div>
-            <h5>Reglas Third Party</h5>
+            <h5>IRT Alert Rules</h5>
             <div class="rule" style="color: orange; font-weight: bold;">⚠️ "No IRT_Alert rules were tagged during Q4. There is a Q3 PR currently in deployment."</div>
-            <div class="rule" style="color: green; font-weight: bold;">🆕 Kubernetes malicious tools [custom]</div>
+            <!-- <div class="rule" style="color: green; font-weight: bold;">🆕 Kubernetes malicious tools [custom]</div>
             <div class="rule" style="color: green; font-weight: bold;">🆕 SQL injection tools detected in Container [custom]</div>
             <div class="rule" style="color: green; font-weight: bold;">🆕 Scanner or automated tools launched in container [custom]</div>
             <div class="rule" style="color: green; font-weight: bold;">🆕 Connect to VPN/Tunnel or Proxy Server [custom]</div>
             <div class="rule" style="color: green; font-weight: bold;">🆕 kubectl suspicious dommand launched in a container [custom]</div>
             <div class="rule" style="color: green; font-weight: bold;">🆕 Load tester/benchmarking utility detect inside a container [custom]</div>
             <div class="rule" style="color: green; font-weight: bold;">🆕 Web Scanner Process detected inside a container [custom]</div>
-            <div class="rule" style="color: green; font-weight: bold;">🆕 Enhanced Suspicious Network tools in cluster [custom]</div>
+            <div class="rule" style="color: green; font-weight: bold;">🆕 Enhanced Suspicious Network tools in cluster [custom]</div> -->
           </div>
       </div>
   </div>
