--- a/metrics/statistics.html
+++ b/metrics/statistics.html
@@ -275,7 +275,7 @@
   <div class="col-md-3">
       <div class="metric-card">
           <h4 class="metric-header">Rules Deployed in last package</h4>
-          <p class="metric-value">n</p>
+          <p class="metric-value">117/p>
       </div>
   </div>
 
