vendor and thirdparty rules labels

--- a/rules/vendor-rules.html
+++ b/rules/vendor-rules.html
@@ -102,11 +102,11 @@
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>Welcome to Vendor Rules</h1>
-    <p>This is a simple landing page template with a responsive navbar using Bootstrap 5.</p>
+    <h1>Vendor Rules</h1>
+    <p>Falco comes with a comprehensive set of preconfigured rules for container, host, Kubernetes, and cloud security, with the option to customize your own rules. In the baseline defined for MELI, 38 out of the 75 default rules were integrated to identify risks and common bad practices in containerized environments.</p>
 
     <!-- List of Items -->
-    <h2>Security Alerts</h2>
+    <h2>MELI Vendor Rules Baseline</h2>
     <ul class="list-group mt-3">
       <li class="list-group-item">Directory traversal monitored file read</li>
       <li class="list-group-item">Read ssh information</li>
