--- a/rules/community-rules.html
+++ b/rules/community-rules.html
@@ -102,11 +102,11 @@
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>Welcome to Community Rules</h1>
+    <h1>ThirdParty Rules</h1>
     <p>Below is the list of community rules contributed by the Falco runtime security community. While these rules may not be the most precise, they help enhance detection coverage in certain critical scenarios where official rules from the vendor are not yet available.</p>
 
     <!-- List of Items -->
-    <h2>Security Alerts</h2>
+    <h2>MELI ThirdParty Rules Baseline</h2>
     <ul class="list-group mt-3">
       <li class="list-group-item">Backdoored library loaded into SSHD</li>
       <li class="list-group-item">PTRACE anti-debug attempt</li>
