--- a/metrics/maturity.html
+++ b/metrics/maturity.html
@@ -74,8 +74,8 @@
               Info
             </a>
             <ul class="dropdown-menu" aria-labelledby="infoDropdown">
-              <li><a class="dropdown-item" href="#">What Is Falco</a></li>
-              <li><a class="dropdown-item" href="#">Why Falco</a></li>
+              <li><a class="dropdown-item" href="../info/what-is-falco.html">What Is Falco</a></li>
+              <li><a class="dropdown-item" href="../info/why-falco.html">Why Falco</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
