--- a/metrics/statistics.html
+++ b/metrics/statistics.html
@@ -106,8 +106,8 @@
               Info
             </a>
             <ul class="dropdown-menu" aria-labelledby="infoDropdown">
-              <li><a class="dropdown-item" href="#">What Is Falco</a></li>
-              <li><a class="dropdown-item" href="#">Why Falco</a></li>
+              <li><a class="dropdown-item" href="../info/what-is-falco.html">What Is Falco</a></li>
+              <li><a class="dropdown-item" href="../info/why-falco.html">Why Falco</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -137,9 +137,10 @@
               Security
             </a>
             <ul class="dropdown-menu" aria-labelledby="securityDropdown">
-              <li><a class="dropdown-item" href="#">Threats</a></li>
-              <li><a class="dropdown-item" href="#">Bypasses</a></li>
-              <li><a class="dropdown-item" href="#">Challenges</a></li>
+              <li><a class="dropdown-item" href="../security/threats.html">Threats</a></li>
+              <li><a class="dropdown-item" href="security/workshop.html">Workshop</a></li>
+              <li><a class="dropdown-item" href="../security/bypasses.html">Bypasses</a></li>
+              <li><a class="dropdown-item" href="../security/challenges.html">Challenges</a></li>
             </ul>
           </li>
         </ul>
@@ -215,11 +216,11 @@
           </div>
           <div>
               <h5>Reglas Third Party</h5>
-              <div class="rule">Reverse shell [Third party]</div>
-              <div class="rule">RCE</div>
+              <div class="rule" style="color: orange; font-weight: bold;">⚠️ "No ThirdParty rules were deployed in Q4 due to the number of rules deployed to prevent event drop."</div>
+              <!-- <div class="rule">RCE</div>
               <div class="rule">Regla Third Party 3</div>
               <div class="rule">Regla Third Party 4</div>
-              <div class="rule">Regla Third Party 5</div>
+              <div class="rule">Regla Third Party 5</div> -->
           </div>
       </div>
   </div>
@@ -274,14 +275,14 @@
 <div class="row justify-content-center">
   <div class="col-md-3">
       <div class="metric-card">
-          <h4 class="metric-header">Rules Deployed in last package</h4>
+          <h4 class="metric-header">Last package rules number</h4>
           <p class="metric-value">117</p>
       </div>
   </div>
 
   <div class="col-md-3">
       <div class="metric-card">
-          <h4 class="metric-header">Clusters With Latest Rules
+          <h4 class="metric-header">Clusters with latest rules
           </h4>
           <p class="metric-value">n</p>
       </div>
