--- a/rules/community-rules.html
+++ b/rules/community-rules.html
@@ -103,7 +103,7 @@
   <!-- Content Section -->
   <div class="container mt-5">
     <h1>ThirdParty Rules</h1>
-    <p>Below is the list of community rules contributed by the Falco runtime security community. While these rules may not be the most precise, they help enhance detection coverage in certain critical scenarios where official rules from the vendor are not yet available.</p>
+    <p>Below is the list of ThirdParty rules contributed by the Falco runtime security community and other sources. While these rules may not be the most precise, they help enhance detection coverage in certain critical scenarios where official rules from the vendor are not yet available.</p>
 
     <!-- List of Items -->
     <h2>MELI ThirdParty Rules Baseline</h2>
