--- a/rules/irt-alert-rules.html
+++ b/rules/irt-alert-rules.html
@@ -153,19 +153,19 @@
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>Welcome to statistics</h1>
-    <p>This is a simple landing page template with a responsive navbar using Bootstrap 5.</p>
+    <h1>IRT Alert Rules</h1>
+    <p>IRT_Alert rules are those that, due to their high precision (low number of false positives), are tagged to be forwarded to the Incident Response Team (IRT).</p>
   </div>
 
 
-  <h2 class="text-center my-4">IRT Alert Flow Rules</h2>
+  <h2 class="text-center my-4"> MELI IRT Alert Rules Baseline</h2>
 
   <div class="text-center">
       <button class="btn btn-primary" onclick="toggleRulesParty()">View All IRT_Alert Rules</button>
   </div>
 
   <div class="rules-thirdparty" id="rulesThirdParty">
-      <h4 class="text-center my-3">Reglas</h4>
+      <!-- <h4 class="text-center my-3">Reglas</h4> -->
       <div class="rules-list">
           <div>
             <h5>All IRT_Alert Rules</h5>
