--- a/metrics/effectiveness.html
+++ b/metrics/effectiveness.html
@@ -136,6 +136,7 @@ footer {
             </a>
             <ul class="dropdown-menu" aria-labelledby="securityDropdown">
               <li><a class="dropdown-item" href="security/threats.html">Threats</a></li>
+              <li><a class="dropdown-item" href="security/workshop.html">Workshop</a></li>
               <li><a class="dropdown-item" href="security/bypasses.html">Bypasses</a></li>
               <li><a class="dropdown-item" href="security/challenges.html">Challenges</a></li>
             </ul>
