--- a/rules/custom-rules.html
+++ b/rules/custom-rules.html
@@ -197,7 +197,7 @@ footer {
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>Welcome to Custom Rules</h1>
+    <h1>Custom Rules</h1>
     <p>Custom Falco rules are designed to enhance detection coverage for MELI's clusters and workloads, addressing critical security needs. MELI's vast and complex infrastructure demands broader detection across surfaces like filesystem, database, shell, container, users, network, and processes. Default rules alone are not enough. Below, you will find a list of custom rules written to mitigate cybersecurity risks that could impact the organization and are not covered by the vendor's default rules.</p>
   </div>
 
