--- a/info/what-is-falco.html
+++ b/info/what-is-falco.html
@@ -46,7 +46,7 @@
         <!-- Centered Links -->
         <ul class="navbar-nav navbar-center">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="infoDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -63,9 +63,9 @@
               Rules
             </a>
             <ul class="dropdown-menu" aria-labelledby="rulesDropdown">
-              <li><a class="dropdown-item" href="rules/community-rules.html">Community Rules</a></li>
-              <li><a class="dropdown-item" href="rules/custom-rules.html">Custom Rules</a></li>
-              <li><a class="dropdown-item" href="rules/vendor-rules.html">Vendor Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/community-rules.html">Community Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/custom-rules.html">Custom Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/vendor-rules.html">Vendor Rules</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -73,10 +73,10 @@
               Metrics
             </a>
             <ul class="dropdown-menu" aria-labelledby="metricsDropdown">
-              <li><a class="dropdown-item" href="metrics/statistics.html">Statistics</a></li>
-              <li><a class="dropdown-item" href="metrics/security-coverage.html">Security Coverage</a></li>
-              <li><a class="dropdown-item" href="metrics/maturity.html">Maturity</a></li>
-              <li><a class="dropdown-item" href="metrics/effectiveness.html">Effectiveness</a></li>
+              <li><a class="dropdown-item" href="../metrics/statistics.html">Statistics</a></li>
+              <li><a class="dropdown-item" href="../metrics/security-coverage.html">Security Coverage</a></li>
+              <li><a class="dropdown-item" href="../metrics/maturity.html">Maturity</a></li>
+              <li><a class="dropdown-item" href="../metrics/effectiveness.html">Effectiveness</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -84,10 +84,10 @@
               Security
             </a>
             <ul class="dropdown-menu" aria-labelledby="securityDropdown">
-              <li><a class="dropdown-item" href="security/threats.html">Threats</a></li>
-              <li><a class="dropdown-item" href="security/workshop.html">Workshop</a></li>
-              <li><a class="dropdown-item" href="security/bypasses.html">Bypasses</a></li>
-              <li><a class="dropdown-item" href="security/challenges.html">Challenges</a></li>
+              <li><a class="dropdown-item" href="../security/threats.html">Threats</a></li>
+              <li><a class="dropdown-item" href="../security/workshop.html">Workshop</a></li>
+              <li><a class="dropdown-item" href="../security/bypasses.html">Bypasses</a></li>
+              <li><a class="dropdown-item" href="../security/challenges.html">Challenges</a></li>
             </ul>
           </li>
         </ul>
