--- a/security/bypasses.html
+++ b/security/bypasses.html
@@ -34,7 +34,7 @@ footer {
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <!-- Logo -->
-      <a class="navbar-brand" href="#">Falcom4n</a>
+      <a class="navbar-brand" href="../index.html">Falcom4n</a>
 
       <!-- Navbar Toggle -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,8 +53,8 @@ footer {
               Info
             </a>
             <ul class="dropdown-menu" aria-labelledby="infoDropdown">
-              <li><a class="dropdown-item" href="#">What Is Falco</a></li>
-              <li><a class="dropdown-item" href="#">Why Falco</a></li>
+              <li><a class="dropdown-item" href="../info/what-is-falco.html">What Is Falco</a></li>
+              <li><a class="dropdown-item" href="../info/why-falco.html">Why Falco</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -62,9 +62,9 @@ footer {
               Rules
             </a>
             <ul class="dropdown-menu" aria-labelledby="rulesDropdown">
-              <li><a class="dropdown-item" href="rules/community-rules.html">Community Rules</a></li>
-              <li><a class="dropdown-item" href="rules/custom-rules.html">Custom Rules</a></li>
-              <li><a class="dropdown-item" href="rules/vendor-rules.html">Vendor Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/community-rules.html">Community Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/custom-rules.html">Custom Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/vendor-rules.html">Vendor Rules</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -72,10 +72,10 @@ footer {
               Metrics
             </a>
             <ul class="dropdown-menu" aria-labelledby="metricsDropdown">
-              <li><a class="dropdown-item" href="metrics/statistics.html">Statistics</a></li>
-              <li><a class="dropdown-item" href="metrics/security-coverage.html">Security Coverage</a></li>
-              <li><a class="dropdown-item" href="metrics/maturity.html">Maturity</a></li>
-              <li><a class="dropdown-item" href="metrics/effectiveness.html">Effectiveness</a></li>
+              <li><a class="dropdown-item" href="../metrics/statistics.html">Statistics</a></li>
+              <li><a class="dropdown-item" href="../metrics/security-coverage.html">Security Coverage</a></li>
+              <li><a class="dropdown-item" href="../metrics/maturity.html">Maturity</a></li>
+              <li><a class="dropdown-item" href="../metrics/effectiveness.html">Effectiveness</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -83,9 +83,10 @@ footer {
               Security
             </a>
             <ul class="dropdown-menu" aria-labelledby="securityDropdown">
-              <li><a class="dropdown-item" href="security/threats.html">Threats</a></li>
-              <li><a class="dropdown-item" href="security/bypasses.html">Bypasses</a></li>
-              <li><a class="dropdown-item" href="security/challenges.html">Challenges</a></li>
+              <li><a class="dropdown-item" href="../security/threats.html">Threats</a></li>
+              <li><a class="dropdown-item" href="../security/workshop.html">Workshop</a></li>
+              <li><a class="dropdown-item" href="../security/bypasses.html">Bypasses</a></li>
+              <li><a class="dropdown-item" href="../security/challenges.html">Challenges</a></li>
             </ul>
           </li>
         </ul>
@@ -102,9 +103,20 @@ footer {
 
   <!-- Content Section -->
   <div class="container mt-5">
-    <h1>Welcome to bypasses</h1>
-    <p>This is a simple landing page template with a responsive navbar using Bootstrap 5.</p>
+    <h1>Falco Bypasses</h1>
+    <p>Falco Bypasses represent scenarios where Falco fails to detect certain malicious activities or anomalous behaviors due to technical limitations or specific configurations. These cases highlight opportunities to improve rules and detections to enhance security and reduce risks.</p>
   </div>
+
+    <!-- Under Construction Section -->
+    <div class="container under-construction text-center">
+      <h1>⚠️ Under Construction</h1>
+      <p>We are working hard to bring you the best experience. Stay tuned for updates!</p>
+      <img 
+        src="../assets/wip.jpg" 
+        alt="Banner" 
+        style="max-width: 350px; width: 150%; height: auto; margin: 20px auto;"
+      >
+    </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
