--- a/metrics/maturity.html
+++ b/metrics/maturity.html
@@ -55,7 +55,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <!-- Logo -->
-      <a class="navbar-brand" href="#">Falcom4n</a>
+      <a class="navbar-brand" href="../index.html">Falcom4n</a>
 
       <!-- Navbar Toggle -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,6 +76,7 @@
             <ul class="dropdown-menu" aria-labelledby="infoDropdown">
               <li><a class="dropdown-item" href="../info/what-is-falco.html">What Is Falco</a></li>
               <li><a class="dropdown-item" href="../info/why-falco.html">Why Falco</a></li>
+              <li><a class="dropdown-item" href="./info/use-cases.html">Use cases</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -83,9 +84,9 @@
               Rules
             </a>
             <ul class="dropdown-menu" aria-labelledby="rulesDropdown">
-              <li><a class="dropdown-item" href="community-rules.html">Community Rules</a></li>
-              <li><a class="dropdown-item" href="custom-rules.html">Custom Rules</a></li>
-              <li><a class="dropdown-item" href="vendor-rules.html">Vendor Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/community-rules.html">Community Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/custom-rules.html">Custom Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/vendor-rules.html">Vendor Rules</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -93,10 +94,10 @@
               Metrics
             </a>
             <ul class="dropdown-menu" aria-labelledby="metricsDropdown">
-              <li><a class="dropdown-item" href="statistics.html">Statistics</a></li>
-              <li><a class="dropdown-item" href="security-coverage.html">Security Coverage</a></li>
-              <li><a class="dropdown-item" href="maturity.html">Maturity</a></li>
-              <li><a class="dropdown-item" href="effectiveness.html">Effectiveness</a></li>
+              <li><a class="dropdown-item" href="../metrics/statistics.html">Statistics</a></li>
+              <li><a class="dropdown-item" href="../metrics/security-coverage.html">Security Coverage</a></li>
+              <li><a class="dropdown-item" href="../metrics/maturity.html">Maturity</a></li>
+              <li><a class="dropdown-item" href="../metrics/effectiveness.html">Effectiveness</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
