--- a/metrics/statistics.html
+++ b/metrics/statistics.html
@@ -92,7 +92,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Falcom4n</a>
+      <a class="navbar-brand" href="../index.html">Falcom4n</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -126,10 +126,10 @@
               Metrics
             </a>
             <ul class="dropdown-menu" aria-labelledby="metricsDropdown">
-              <li><a class="dropdown-item" href="statistics.html">Statistics</a></li>
-              <li><a class="dropdown-item" href="security-coverage.html">Security Coverage</a></li>
-              <li><a class="dropdown-item" href="maturity.html">Maturity</a></li>
-              <li><a class="dropdown-item" href="effectiveness.html">Effectiveness</a></li>
+              <li><a class="dropdown-item" href="../metrics/statistics.html">Statistics</a></li>
+              <li><a class="dropdown-item" href="../metrics/security-coverage.html">Security Coverage</a></li>
+              <li><a class="dropdown-item" href="../metrics/maturity.html">Maturity</a></li>
+              <li><a class="dropdown-item" href="../metrics/effectiveness.html">Effectiveness</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
