--- a/metrics/security-coverage.html
+++ b/metrics/security-coverage.html
@@ -40,7 +40,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Falcom4n</a>
+      <a class="navbar-brand" href="../index.html">Falcom4n</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -50,38 +50,39 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="infoDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Info</a>
             <ul class="dropdown-menu" aria-labelledby="infoDropdown">
-              <li><a class="dropdown-item" href="#">What Is Falco</a></li>
-              <li><a class="dropdown-item" href="#">Why Falco</a></li>
+              <li><a class="dropdown-item" href="../info/what-is-falco.html">What Is Falco</a></li>
+              <li><a class="dropdown-item" href="../info/why-falco.html">Why Falco</a></li>
+              <li><a class="dropdown-item" href="../info/use-cases.html">Use cases</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="rulesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Rules</a>
             <ul class="dropdown-menu" aria-labelledby="rulesDropdown">
-              <li><a class="dropdown-item" href="community-rules.html">Community Rules</a></li>
-              <li><a class="dropdown-item" href="custom-rules.html">Custom Rules</a></li>
-              <li><a class="dropdown-item" href="vendor-rules.html">Vendor Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/community-rules.html">Community Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/custom-rules.html">Custom Rules</a></li>
+              <li><a class="dropdown-item" href="../rules/vendor-rules.html">Vendor Rules</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="metricsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Metrics</a>
             <ul class="dropdown-menu" aria-labelledby="metricsDropdown">
-              <li><a class="dropdown-item" href="statistics.html">Statistics</a></li>
-              <li><a class="dropdown-item" href="security-coverage.html">Security Coverage</a></li>
-              <li><a class="dropdown-item" href="maturity.html">Maturity</a></li>
-              <li><a class="dropdown-item" href="effectiveness.html">Effectiveness</a></li>
+              <li><a class="dropdown-item" href="../metrics/statistics.html">Statistics</a></li>
+              <li><a class="dropdown-item" href="../metrics/security-coverage.html">Security Coverage</a></li>
+              <li><a class="dropdown-item" href="../metrics/maturity.html">Maturity</a></li>
+              <li><a class="dropdown-item" href="../metrics/effectiveness.html">Effectiveness</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="securityDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Security</a>
             <ul class="dropdown-menu" aria-labelledby="securityDropdown">
-              <li><a class="dropdown-item" href="#">Threats</a></li>
-              <li><a class="dropdown-item" href="#">Bypasses</a></li>
-              <li><a class="dropdown-item" href="#">Challenges</a></li>
+              <li><a class="dropdown-item" href="../security/threats.html">Threats</a></li>
+              <li><a class="dropdown-item" href="../security/bypasses.html">Bypasses</a></li>
+              <li><a class="dropdown-item" href="../security/challenges.html">Challenges</a></li>
             </ul>
           </li>
         </ul>
         <ul class="navbar-nav navbar-end">
-          <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="../about.html">About</a></li>
         </ul>
       </div>
     </div>
